bee-common/bee-packable-derive/tests/fail/incorrect_tag_enum.stderr
error[E0308]: mismatched types
  --> $DIR/incorrect_tag_enum.rs:10:10
   |
10 | #[derive(Packable)]
   |          ^^^^^^^^ expected `u8`, found `u32`
   |
   = note: expected reference `&u8`
              found reference `&u32`
   = note: this error originates in the derive macro `Packable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/incorrect_tag_enum.rs:15:22
   |
10 | #[derive(Packable)]
   |          -------- this expression has type `u8`
...
15 |     #[packable(tag = 0u32)]
   |                      ^^^^ expected `u8`, found `u32`
